<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onBackClick"
        android:text="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_intro" />

    <TextView
        android:id="@+id/contact_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/contact_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact" />

    <Button
        android:id="@+id/contact_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_contact" />

</LinearLayout>