<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <Button
        android:id="@+id/yuanshen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuanshen" />
    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_camera" />

    <Button
        android:id="@+id/button_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_contacts" />

    <FrameLayout
        android:id="@+id/sample_content_fragment"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:background="@color/colorPrimary" />

</LinearLayout>

